# MyCppProjectTemplate

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt  loesung1.cpp
app/: CMakeLists.txt  main.cpp
benchmarks/: CMakeLists.txt  main.cpp
cmake/: Documentation.cmake
include/: factories.h  html_lib.h  myIterator.h  prototypes.h  singleton.h
src/: CMakeLists.txt  factories.cpp  html_lib.cpp  prototypes.cpp  singleton.cpp
tests/: CMakeLists.txt  test_mylib.cpp  test_singleton.cpp
